@@ -48,6 +48,7 @@ import static org.tn5250j.TN5250jConstants.MNEMONIC_SPOOL_FILE;
 import static org.tn5250j.TN5250jConstants.MNEMONIC_SYSREQ;
 import static org.tn5250j.TN5250jConstants.MNEMONIC_TOGGLE_CONNECTION;
 
+import java.awt.Desktop;
 import java.awt.Frame;
 import java.awt.HeadlessException;
 import java.awt.Rectangle;
@@ -60,11 +61,14 @@ import java.awt.datatransfer.UnsupportedFlavorException;
 import java.awt.event.ActionEvent;
 import java.awt.event.MouseEvent;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.text.NumberFormat;
 import java.util.Iterator;
 import java.util.List;
+import java.util.regex.Pattern;
 
 import javax.swing.AbstractAction;
 import javax.swing.Action;
@@ -98,6 +102,9 @@ import org.tn5250j.tools.logging.TN5250jLogger;
  */
 public class SessionPopup {
 
+	// private static final String SIMPLE_URL_CHECK = "((mailto\\:|(news|(ht|f)tp(s?))\\://){1}\\S+)";
+	private static final String SIMPLE_URL_CHECK = "((((ht|f)tp(s?))\\://){1}\\S+)";
+	
 	private final Screen5250 screen;
 	private final SessionGUI sessiongui;
 	private final tnvt vt;
@@ -233,6 +240,26 @@ public class SessionPopup {
 				};
 				sumMenu.add(action);
 
+			}
+			
+			// open URL
+			{
+				if (Desktop.isDesktopSupported()) {
+					final String textcontent = screen.copyText(sessiongui.getBoundingArea());
+					if (textcontent != null && textcontent.trim().length() > 0
+							&& Pattern.matches(SIMPLE_URL_CHECK, textcontent.trim())) {
+						JMenuItem mi = new JMenuItem("Open in browser");
+						Action a = new AbstractAction("Open in browser") {
+							private static final long serialVersionUID = 1L;
+							public void actionPerformed(ActionEvent e) {
+								openInBrowser(textcontent.trim());
+							}
+						};
+						mi.setArmed(false);
+						mi.setAction(a);
+						popup.add(mi);
+					}
+				}
 			}
 
 			popup.addSeparator();
@@ -582,26 +609,25 @@ public class SessionPopup {
 		LoadMacroMenu.loadMacros(sessiongui, menu);
 	}
 
+	/**
+	 * @param action
+	 * @param accelKey can be null
+	 * @return
+	 */
 	private JMenuItem createMenuItem(Action action, String accelKey) {
-
-		JMenuItem mi;
-
-		mi = new JMenuItem();
+		JMenuItem mi = new JMenuItem();
 		mi.setAction(action);
-		if (sessiongui.keyHandler.isKeyStrokeDefined(accelKey))
+		if (sessiongui.keyHandler.isKeyStrokeDefined(accelKey)) {
 			mi.setAccelerator(sessiongui.keyHandler.getKeyStroke(accelKey));
-		else {
-
+		} else {
 			InputMap map = sessiongui.getInputMap();
 			KeyStroke[] allKeys = map.allKeys();
 			for (int x = 0; x < allKeys.length; x++) {
-
 				if (((String)map.get(allKeys[x])).equals(accelKey)) {
 					mi.setAccelerator(allKeys[x]);
 					break;
 				}
 			}
-
 		}
 		return mi;
 	}
@@ -625,6 +651,23 @@ public class SessionPopup {
 			mi.setText(LangTool.getString("key." + (String)map.get(allKeys[x])));
 			mi.setAccelerator(allKeys[x]);
 			sm.add(mi);
+		}
+	}
+	
+	/**
+	 * @param uristring
+	 */
+	private void openInBrowser(String uristring) {
+		if (!Desktop.isDesktopSupported()) {
+			log.warn("Java Desktop API not supported.");
+			return;
+		}
+		Desktop d = Desktop.getDesktop();
+		try {
+			URI uri = new URI(uristring);
+			d.browse(uri);
+		} catch (Exception e) {
+			log.error("Error while opening uri: "+uristring, e);
 		}
 	}
 
